--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
         margin: 25px 5px;
         border-radius: 20px;
     }
-    .header{
+
+    @media only screen and (max-width: 768px) {
+        .items-bruna {
+            width: auto;
+            height: 200px;
+            margin: 10px 5px;
+            border-radius: 20px;
+        }
+    }
+
+    .header {
         width: 100%;
         max-width: 1200px;
         height: auto;
@@ -51,7 +61,7 @@
 
     </div>
 
-    
+
 </body>
 
 </html>
